[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "net-trace"
version = "0.1.0"
description = "Network debugging CLI: DNS resolution, SSL analysis, HTTP trace timing breakdown"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "net-trace contributors"}]
keywords = ["network", "dns", "ssl", "http", "debugging", "trace"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
net-trace = "net_trace.cli:cli"

[tool.setuptools.packages.find]
include = ["net_trace*"]
